--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>✏️Portfolio</title>
 </head>
@@ -17,6 +17,9 @@
         <h1>frontend developer</h1>
         <h3>+ graphic designer</h3>
         <h3>+ illustrator</h3>
+      </div>
+      <div class="ragna">
+        <img src="./assets/ragna.JPG" alt="">
       </div>
     </div>
   </header>
