Added links and icons on header

--- a/code/index.html
+++ b/code/index.html
@@ -18,6 +18,17 @@
         <h3>+ graphic designer</h3>
         <h3>+ illustrator</h3>
       </div>
+      <section class="circles">
+        <a href="https://www.linkedin.com/in/ragnaulfars/" class="circle">
+          <img class="icons" src="./assets/icon-linkedin.svg" alt="Linked-in icon">
+        </a>
+        <a href="https://github.com/Ragtulf" class="circle">
+          <img class="icons" src="./assets/github.svg" alt="Github icon">
+        </a>
+        <div class="circle">
+          <img class="icons" src="./assets/stackoverflow.svg" alt="Stack-overflow icon">
+        </div>
+      </section>
       <div class="ragna">
         <img src="./assets/ragna.JPG" alt="">
       </div>
