--- a/code/index.html
+++ b/code/index.html
@@ -25,15 +25,20 @@
         <a href="https://github.com/Ragtulf" class="circle">
           <img class="icons" src="./assets/github.svg" alt="Github icon">
         </a>
-        <div class="circle">
+        <a href="https://stackoverflow.com/c/technigo/users/61/?tab=profile" class="circle">
           <img class="icons" src="./assets/stackoverflow.svg" alt="Stack-overflow icon">
-        </div>
+        </a>
       </section>
       <div class="ragna">
         <img src="./assets/ragna.JPG" alt="">
       </div>
     </div>
   </header>
+  <section class="intro">
+    <p class="intro-txt">
+      Hello! I’m a frontend developer, a graphic designer and an illustrator all rolled into one. I love solving problems that matter and creating awesome, meaningful products for people to love.
+    </p>
+  </section>
   
 </body>
 </html>
