Added Tech Section

--- a/code/index.html
+++ b/code/index.html
@@ -39,6 +39,13 @@
       Hello! I’m a frontend developer, a graphic designer and an illustrator all rolled into one. I love solving problems that matter and creating awesome, meaningful products for people to love.
     </p>
   </section>
+  <section class="tech">
+    <h2>TECH</h2>
+    <p class="tech-txt">
+      <!-- HTML, CSS, Flexbox, JavaScript, ES6, JSX, React, React Hooks, Redux, Node.js, Mongo DB, Web Accessibly, API:s, mob-programming, pair-programming, Github. -->
+      HTML, CSS, Flexbox, <span class="red">JavaScript,</span> ES6, JSX, <span class="red">React, React Hooks, Redux,</span> Node.js, Mongo DB, Web Accessibly, API:s, mob-programming, pair-programming, Github.
+    </p>
+  </section>
   
 </body>
 </html>
