Finished the Skills section

--- a/code/index.html
+++ b/code/index.html
@@ -245,10 +245,47 @@
 
   <section class="skills-section">
     <h2>SKILLS</h2>
+    <div class="column-wrapper">
+      <div class="column">
+        <p class="red-bold">CODE</p>
+        <p>HTML5</p>
+        <p>CSS3</p>
+        <p>Javascript</p>
+        <p>ES6</p>   
+        <p>React</p>
+        <p>SASS</p> 
+        <p>GitHub</p> 
+        <p>Node.js</p>  
+        <p class="red-bold">UPCOMING</p> 
+        <p>Redux</p> 
+      </div>
+  
+      <div class="column">
+        <p class="red-bold">TOOLBOX</p>
+        <p>Atom</p>
+        <p>Postman</p>
+        <p>Adobe Photoshop</p>
+        <p>Adobe Illustrator</p>
+        <p>Microsoft Excel</p>
+        <p>Keynote</p>
+        <p>Slack</p>
+      </div>
+
+      <div class="column">
+        <p class="red-bold">MORE</p>
+        <p>Design lead</p>
+        <p>Branding Strategy</p>
+        <p>Process design</p>
+        <p>Concept development</p>
+        <p>Agile methodology</p>
+      </div>
+    </div>
   </section>
 
   <!------- FOR MORE ------->
-
+  <section class="for-more-section">
+    <h2>FOR MORE</h2>
+  </section>
 
   <!------- CONTACT ------->
   
