Finished content of website

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>✏️Portfolio</title>
 </head>
@@ -285,9 +285,41 @@
   <!------- FOR MORE ------->
   <section class="for-more-section">
     <h2>FOR MORE</h2>
+
+    <section class="circles-red">
+      <div>
+        <a href="https://www.linkedin.com/in/ragnaulfars/" class="circle-red">
+          <img class="icons-red" src="./assets/icon-linkedin-red.svg" alt="Linked-in icon">
+        </a>
+        <p class="red-bold">LINKEDIN</p>
+      </div>
+     <div>
+      <a href="https://github.com/Ragtulf" class="circle-red">
+        <img class="icons-red" src="./assets/github-red.svg" alt="Github icon">
+      </a>
+      <p class="red-bold">GITHUB</p>
+     </div>
+      
+     <div>
+      <a href="https://stackoverflow.com/c/technigo/users/61/?tab=profile" class="circle-red">
+        <img class="icons-red" src="./assets/stackoverflow-red.svg" alt="Stack-overflow icon">
+      </a>
+      <p class="red-bold">STACKOVERFLOW</p>
+     </div>
+      
+    </section>
   </section>
 
   <!------- CONTACT ------->
   
+  <section class="contact-section">
+    <div class="contact-text">
+      <h5 class="contact">CONTACT</h5>
+      <p>Ragna Úlfarsdóttir</p>
+      <p>+46 079 078 11 23</p>
+      <p>ragnaulfars@gmail.com</p>
+    </div>
+  </section>
+
 </body>
 </html>
