Changed divs into a tags

--- a/code/index.html
+++ b/code/index.html
@@ -57,17 +57,15 @@
     <h2>FEATURED PROJECTS</h2>
       <div class="featured-wrapper">
         <article class="card">
-          <div class="image-box">
+          <a href="https://admiring-kilby-577ac3.netlify.com/" class="image-box">
             <img src="./assets/news-site.png" alt="A picture of News Site website">
             <div class="over-image">
-              <a href="https://admiring-kilby-577ac3.netlify.com/">
-                <h6 class="project-name">MAGAZINE</h6>
-              </a>
+              <h6 class="project-name">MAGAZINE</h6>
             </div>
-          </div>
-          <p class="project-description">
+          </a>
+          <a href="https://admiring-kilby-577ac3.netlify.com/" class="project-description">
             <span class="red-bold">NEWS SITE.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined" >>></span>
-          </p>
+          </a>
           <div class="tags">
             <p class="tag">HTML5</p>
             <p class="tag">CSS3</p>
@@ -77,17 +75,15 @@
         </article>
 
         <article class="card">
-          <div class="image-box">
+          <a href="https://dazzling-lovelace-cca7c7.netlify.com/" class="image-box">
             <img src="./assets/weather-app.png" alt="A picture of Weather-app website">
             <div class="over-image">
-              <a href="https://dazzling-lovelace-cca7c7.netlify.com/">
-                <h6 class="project-name">REYKJAVIK WEATHER</h6>
-              </a>
+              <h6 class="project-name">REYKJAVIK WEATHER</h6>
             </div>
-          </div>
-          <p class="project-description">
+          </a>
+          <a href="https://dazzling-lovelace-cca7c7.netlify.com/" class="project-description">
             <span class="red-bold">WEATHER APP.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined">>></span>
-          </p>
+          </a>
           <div class="tags">
             <p class="tag">React</p>
             <p class="tag">CSS3</p>
@@ -97,17 +93,15 @@
         </article>
 
         <article class="card">
-          <div class="image-box">
+          <a href="https://dazzling-lichterman-7db9bf.netlify.com/" class="image-box">
             <img src="./assets/business-site.png" alt="A picture of a subscription form for an online magazine">
             <div class="over-image">
-              <a href="https://dazzling-lichterman-7db9bf.netlify.com/">
-                <h6 class="project-name">SUBSCRIBE HERE!</h6>
-              </a>
+              <h6 class="project-name">SUBSCRIBE HERE!</h6>
             </div>
-          </div>
-          <p class="project-description">
+          </a>
+          <a href="https://dazzling-lichterman-7db9bf.netlify.com/" class="project-description">
             <span class="red-bold">BUSINESS SITE.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined">>></span>
-          </p>
+          </a>
           <div class="tags">
             <p class="tag">HTML5</p>
             <p class="tag">CSS3</p>
@@ -117,17 +111,15 @@
         </article>
 
         <article class="card">
-          <div class="image-box">
+          <a href="https://epic-hodgkin-b4c0d1.netlify.com/" class="image-box">
             <img src="./assets/cluedo-cards2.png" alt="A picture of the Cluedo Cards website">
             <div class="over-image">
-              <a href="https://epic-hodgkin-b4c0d1.netlify.com/">
                 <h6 class="project-name">REVEAL THE MYSTERY</h6>
-              </a>
             </div>
-          </div>
-          <p class="project-description">
+          </a>
+          <a href="https://epic-hodgkin-b4c0d1.netlify.com/" class="project-description">
             <span class="red-bold">CLUEDO CARDS.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined">>></span>
-          </p>
+          </a>
           <div class="tags">
             <p class="tag">React</p>
             <p class="tag">CSS3</p>
@@ -142,9 +134,9 @@
       <h5>OTHER PROJECTS</h5>
       <div class="other-projects">
         <div class="other-pro-container">
-          <p class="project-description">
+          <a href="#" class="project-description">
             <span class="red-bold">PROJECT TITLE.</span> A short summary of the project. <span class="red-bold">>></span>
-          </p>
+          </a>
           <div class="tags">
             <p class="tag">React</p>
             <p class="tag">CSS3</p>
@@ -154,9 +146,9 @@
         </div>
 
         <div class="other-pro-container">
-          <p class="project-description">
+          <a href="#" class="project-description">
             <span class="red-bold">DESCRIPTION OF TITLE.</span> Write short what the project is about and what technologies you used. <span class="red-bold">>></span>
-          </p>
+          </a>
           <div class="tags">
             <p class="tag">React</p>
             <p class="tag">CSS3</p>
@@ -166,9 +158,9 @@
         </div>
 
         <div class="other-pro-container">
-          <p class="project-description">
+          <a href="https://wonderful-hopper-f7ab96.netlify.com" class="project-description">
             <span class="red-bold">PIZZA BOT.</span> Chat with a pizza bot. Hours of fun. <span class="red-bold">>></span>
-          </p>
+          </a>
           <div class="tags">
             <p class="tag">Javascript</p>
             <p class="tag">HTML5</p>
@@ -177,9 +169,9 @@
         </div>
 
         <div class="other-pro-container">
-          <p class="project-description">
+          <a href="#" class="project-description">
             <span class="red-bold">PROJECT X.</span> My favorite project to date. <span class="red-bold">>></span>
-          </p>
+          </a>
           <div class="tags">
             <p class="tag">React</p>
             <p class="tag">CSS3</p>
@@ -195,49 +187,44 @@
   <section class="my-thoughts">
     <h2>MY THOUGHTS ABOUT CODE</h2>
     <div class="my-thoughts-wrapper">
+
       <article class="thought-card">
-        <div class="image-box">
+        <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="image-box">
           <img src="./assets/rollercoaster04.jpeg" alt="A colorful rollercoaster">
-          <div class="over-image">
-            <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D"></a>
-          </div>
-        </div>
-        <div class="articles-by-me">
+        </a>
+        <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="articles-by-me">
           <p class="red-thin">JAN 2020</p>
           <h6>A Newbie Developer: </h6>
           <p>
             Learning to love code Writing code is less about “just working”. Instead, it’s much more about creativity. It’s similar to creative writing in that the author architecting a story must use an assortment of tools and components (i.e., content) in such a way to satisfy a particular objective. <span class="red-bold" >>></span>
           </p> 
-        </div>
+        </a>
       </article>
 
       <article class="thought-card">
-        <div class="image-box">
+        <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="image-box">
           <img src="./assets/pattern.jpeg" alt="A digital rendering of colorful fur">
-          <div class="over-image">
-            <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D"></a>
-          </div>
-        </div>
-        <div class="articles-by-me">
+        </a>
+        <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="articles-by-me">
           <p class="red-thin">MAR 2020</p>
           <h6>In The Thick Of It: </h6>
           <p>
             Learning to love code Writing code is less about “just working”. Instead, it’s much more about creativity. It’s similar to creative writing in that the author architecting a story must use an assortment of tools and components (i.e., content) in such a way to satisfy a particular objective. <span class="red-bold" >>></span>
           </p> 
-        </div>
+        </a>
       </article>
     </div>
     <!------- MORE THOUGHTS ------->
     
     <h5>MORE THOUGHTS</h5>
     <div class="more-thoughts-container">
-      <p class="more-thoughts-list">
+      <a href="#" class="more-thoughts-list">
         <span class="red-thin">APR 2020</span> My favorite project to date. <span class="red-bold">>></span>
-      </p>
+      </a>
 
-      <p class="more-thoughts-list">
+      <a href="#" class="more-thoughts-list">
         <span class="red-thin">DEC 2019</span> Happy Coding! <span class="red-bold">>></span>
-      </p>
+      </a>
     </div> 
   </section>
      
