Fixed colors and removed underlines on links

--- a/code/index.html
+++ b/code/index.html
@@ -32,7 +32,7 @@
         </a>
       </section>
       <div class="ragna">
-        <img src="./assets/ragna.JPG" alt="">
+        <img src="./assets/ragna.JPG" alt="A profile picture of Ragna">
       </div>
     </div>
   </header>
@@ -135,7 +135,7 @@
       <div class="other-projects">
         <div class="other-pro-container">
           <a href="#" class="project-description">
-            <span class="red-bold">PROJECT TITLE.</span> A short summary of the project. <span class="red-bold">>></span>
+            <span class="red-bold red-bold-underlined">PROJECT TITLE.</span> A short summary of the project. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
             <p class="tag">React</p>
@@ -147,7 +147,7 @@
 
         <div class="other-pro-container">
           <a href="#" class="project-description">
-            <span class="red-bold">DESCRIPTION OF TITLE.</span> Write short what the project is about and what technologies you used. <span class="red-bold">>></span>
+            <span class="red-bold red-bold-underlined">DESCRIPTION OF TITLE.</span> Write short what the project is about and what technologies you used. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
             <p class="tag">React</p>
@@ -159,7 +159,7 @@
 
         <div class="other-pro-container">
           <a href="https://wonderful-hopper-f7ab96.netlify.com" class="project-description">
-            <span class="red-bold">PIZZA BOT.</span> Chat with a pizza bot. Hours of fun. <span class="red-bold">>></span>
+            <span class="red-bold red-bold-underlined">PIZZA BOT.</span> Chat with a pizza bot. Hours of fun. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
             <p class="tag">Javascript</p>
@@ -170,7 +170,7 @@
 
         <div class="other-pro-container">
           <a href="#" class="project-description">
-            <span class="red-bold">PROJECT X.</span> My favorite project to date. <span class="red-bold">>></span>
+            <span class="red-bold red-bold-underlined">PROJECT X.</span> My favorite project to date. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
             <p class="tag">React</p>
@@ -219,11 +219,11 @@
     <h5>MORE THOUGHTS</h5>
     <div class="more-thoughts-container">
       <a href="#" class="more-thoughts-list">
-        <span class="red-thin">APR 2020</span> My favorite project to date. <span class="red-bold">>></span>
+        <span class="red-thin red-underline">APR 2020</span> My favorite project to date. <span class="red-bold red-underline">>></span>
       </a>
 
       <a href="#" class="more-thoughts-list">
-        <span class="red-thin">DEC 2019</span> Happy Coding! <span class="red-bold">>></span>
+        <span class="red-thin red-underline">DEC 2019</span> Happy Coding! <span class="red-bold red-underline">>></span>
       </a>
     </div> 
   </section>
