Cleaned up the code a bit

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   
-  <!------- HEADER ------->
+  <!-- HEADER ------->
 
   <header>
     <div class="hero-image">
@@ -37,7 +37,7 @@
     </div>
   </header>
 
-  <!------- INTRO ------->
+  <!-- INTRO ------->
 
   <section class="intro">
     <p class="intro-txt">
@@ -51,7 +51,7 @@
     </p>
   </section>
 
-  <!------- FEATURED PROJECTS ------->
+  <!-- FEATURED PROJECTS ------->
 
   <section class="featured">
     <h2>FEATURED PROJECTS</h2>
@@ -182,7 +182,7 @@
       </div>
   </section>
 
-  <!------- MY THOUGHTS ABOUT CODE ------->
+  <!-- MY THOUGHTS ABOUT CODE ------->
 
   <section class="my-thoughts">
     <h2>MY THOUGHTS ABOUT CODE</h2>
@@ -193,11 +193,13 @@
           <img src="./assets/rollercoaster04.jpeg" alt="A colorful rollercoaster">
         </a>
         <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="articles-by-me">
-          <p class="red-thin">JAN 2020</p>
-          <h6>A Newbie Developer: </h6>
-          <p>
-            Learning to love code Writing code is less about “just working”. Instead, it’s much more about creativity. It’s similar to creative writing in that the author architecting a story must use an assortment of tools and components (i.e., content) in such a way to satisfy a particular objective. <span class="red-bold" >>></span>
-          </p> 
+          <div class="red-on-hover">
+            <p class="red-thin">JAN 2020</p>
+            <h6>A Newbie Developer: </h6>
+            <p>
+              Learning to love code Writing code is less about “just working”. Instead, it’s much more about creativity. It’s similar to creative writing in that the author architecting a story must use an assortment of tools and components (i.e., content) in such a way to satisfy a particular objective. <span class="red-bold" >>></span>
+            </p> 
+          </div>
         </a>
       </article>
 
@@ -206,29 +208,31 @@
           <img src="./assets/pattern.jpeg" alt="A digital rendering of colorful fur">
         </a>
         <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="articles-by-me">
-          <p class="red-thin">MAR 2020</p>
+          <div class="red-on-hover">
+            <p class="red-thin">MAR 2020</p>
           <h6>In The Thick Of It: </h6>
           <p>
             Learning to love code Writing code is less about “just working”. Instead, it’s much more about creativity. It’s similar to creative writing in that the author architecting a story must use an assortment of tools and components (i.e., content) in such a way to satisfy a particular objective. <span class="red-bold" >>></span>
           </p> 
+          </div>
         </a>
       </article>
     </div>
-    <!------- MORE THOUGHTS ------->
+    <!-- MORE THOUGHTS ------->
     
     <h5>MORE THOUGHTS</h5>
     <div class="more-thoughts-container">
-      <a href="#" class="more-thoughts-list">
+      <a href="#" class="more-thoughts-list red-on-hover">
         <span class="red-thin red-underline">APR 2020</span> My favorite project to date. <span class="red-bold red-underline">>></span>
       </a>
 
-      <a href="#" class="more-thoughts-list">
+      <a href="#" class="more-thoughts-list red-on-hover">
         <span class="red-thin red-underline">DEC 2019</span> Happy Coding! <span class="red-bold red-underline">>></span>
       </a>
     </div> 
   </section>
      
-  <!------- SKILLS ------->
+  <!-- SKILLS ------->
 
   <section class="skills-section">
     <h2>SKILLS</h2>
@@ -269,7 +273,7 @@
     </div>
   </section>
 
-  <!------- FOR MORE ------->
+  <!-- FOR MORE ------->
   <section class="for-more-section">
     <h2>FOR MORE</h2>
 
@@ -297,7 +301,7 @@
     </section>
   </section>
 
-  <!------- CONTACT ------->
+  <!-- CONTACT ------->
   
   <section class="contact-section">
     <div class="contact-text">
