--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-  <title>✏️Portfolio</title>
+  <title>Ragna Úlfarsdóttir | Portfolio</title>
 </head>
 <body>
   
