Site is responsive

--- a/code/index.html
+++ b/code/index.html
@@ -185,7 +185,7 @@
   <!-- MY THOUGHTS ABOUT CODE -->
 
   <section class="my-thoughts">
-    <h2>MY THOUGHTS ABOUT CODE</h2>
+    <h2>MY THOUGHTS <span class="heading-short"> ABOUT CODE</span></h2>
     <div class="my-thoughts-wrapper">
 
       <article class="thought-card">
