Changed links to link to a new tab. Added red bar to intro section. Made phone number and email into links in the footer.

--- a/code/index.html
+++ b/code/index.html
@@ -25,13 +25,13 @@
         <h3>+ illustrator</h3>
       </div>
       <section class="circles">
-        <a href="https://www.linkedin.com/in/ragnaulfars/" class="circle">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ragnaulfars/" class="circle">
           <img class="icons" src="./assets/icon-linkedin.svg" alt="Linked-in icon">
         </a>
-        <a href="https://github.com/Ragtulf" class="circle">
+        <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf" class="circle">
           <img class="icons" src="./assets/github.svg" alt="Github icon">
         </a>
-        <a href="https://stackoverflow.com/c/technigo/users/61/?tab=profile" class="circle">
+        <a target="_blank" rel="noopener noreferrer" href="https://stackoverflow.com/c/technigo/users/61/?tab=profile" class="circle">
           <img class="icons" src="./assets/stackoverflow.svg" alt="Stack-overflow icon">
         </a>
       </section>
@@ -45,9 +45,12 @@
 
   <section class="intro">
     <p class="intro-txt">
+      <span class="red-line"></span>
       Hello! I’m a frontend developer, a graphic designer and an illustrator all rolled into one. I love solving problems that matter and creating awesome, meaningful products for people to love.
     </p>
   </section>
+
+  <!-- TECH SECTION -->
   <section class="tech">
     <h2>TECH</h2>
     <p class="tech-txt">
@@ -61,13 +64,13 @@
     <h2>FEATURED PROJECTS</h2>
       <div class="featured-wrapper">
         <article class="card">
-          <a href="https://admiring-kilby-577ac3.netlify.com/" class="image-box">
+          <a target="_blank" rel="noopener noreferrer" href="https://admiring-kilby-577ac3.netlify.com/" class="image-box">
             <img src="./assets/news-site.png" alt="A picture of News Site website">
             <div class="over-image">
               <h6 class="project-name">MAGAZINE</h6>
             </div>
           </a>
-          <a href="https://admiring-kilby-577ac3.netlify.com/" class="project-description">
+          <a target="_blank" rel="noopener noreferrer" href="https://admiring-kilby-577ac3.netlify.com/" class="project-description">
             <span class="red-bold">NEWS SITE.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined" >>></span>
           </a>
           <div class="tags">
@@ -79,13 +82,13 @@
         </article>
 
         <article class="card">
-          <a href="https://dazzling-lovelace-cca7c7.netlify.com/" class="image-box">
+          <a target="_blank" rel="noopener noreferrer" href="https://dazzling-lovelace-cca7c7.netlify.com/" class="image-box">
             <img src="./assets/weather-app.png" alt="A picture of Weather-app website">
             <div class="over-image">
               <h6 class="project-name">REYKJAVIK WEATHER</h6>
             </div>
           </a>
-          <a href="https://dazzling-lovelace-cca7c7.netlify.com/" class="project-description">
+          <a target="_blank" rel="noopener noreferrer" href="https://dazzling-lovelace-cca7c7.netlify.com/" class="project-description">
             <span class="red-bold">WEATHER APP.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined">>></span>
           </a>
           <div class="tags">
@@ -97,13 +100,13 @@
         </article>
 
         <article class="card">
-          <a href="https://dazzling-lichterman-7db9bf.netlify.com/" class="image-box">
+          <a target="_blank" rel="noopener noreferrer" href="https://dazzling-lichterman-7db9bf.netlify.com/" class="image-box">
             <img src="./assets/business-site.png" alt="A picture of a subscription form for an online magazine">
             <div class="over-image">
               <h6 class="project-name">SUBSCRIBE HERE!</h6>
             </div>
           </a>
-          <a href="https://dazzling-lichterman-7db9bf.netlify.com/" class="project-description">
+          <a target="_blank" rel="noopener noreferrer" href="https://dazzling-lichterman-7db9bf.netlify.com/" class="project-description">
             <span class="red-bold">BUSINESS SITE.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined">>></span>
           </a>
           <div class="tags">
@@ -115,13 +118,13 @@
         </article>
 
         <article class="card">
-          <a href="https://epic-hodgkin-b4c0d1.netlify.com/" class="image-box">
+          <a target="_blank" rel="noopener noreferrer" href="https://epic-hodgkin-b4c0d1.netlify.com/" class="image-box">
             <img src="./assets/cluedo-cards2.png" alt="A picture of the Cluedo Cards website">
             <div class="over-image">
                 <h6 class="project-name">REVEAL THE MYSTERY</h6>
             </div>
           </a>
-          <a href="https://epic-hodgkin-b4c0d1.netlify.com/" class="project-description">
+          <a target="_blank" rel="noopener noreferrer" href="https://epic-hodgkin-b4c0d1.netlify.com/" class="project-description">
             <span class="red-bold">CLUEDO CARDS.</span> Write short what the project is about and what technologies you used. <span class="red-bold underlined">>></span>
           </a>
           <div class="tags">
@@ -138,7 +141,7 @@
       <h5>OTHER PROJECTS</h5>
       <div class="other-projects">
         <div class="other-pro-container">
-          <a href="#" class="project-description">
+          <a target="_blank" rel="noopener noreferrer" href="#" class="project-description">
             <span class="red-bold red-bold-underlined">PROJECT TITLE.</span> A short summary of the project. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
@@ -150,7 +153,7 @@
         </div>
 
         <div class="other-pro-container">
-          <a href="#" class="project-description">
+          <a target="_blank" rel="noopener noreferrer" href="#" class="project-description">
             <span class="red-bold red-bold-underlined">DESCRIPTION OF TITLE.</span> Write short what the project is about and what technologies you used. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
@@ -162,7 +165,7 @@
         </div>
 
         <div class="other-pro-container">
-          <a href="https://wonderful-hopper-f7ab96.netlify.com" class="project-description">
+          <a target="_blank" rel="noopener noreferrer" href="https://wonderful-hopper-f7ab96.netlify.com" class="project-description">
             <span class="red-bold red-bold-underlined">PIZZA BOT.</span> Chat with a pizza bot. Hours of fun. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
@@ -173,7 +176,7 @@
         </div>
 
         <div class="other-pro-container">
-          <a href="#" class="project-description">
+          <a target="_blank" rel="noopener noreferrer" href="#" class="project-description">
             <span class="red-bold red-bold-underlined">PROJECT X.</span> My favorite project to date. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
@@ -193,10 +196,10 @@
     <div class="my-thoughts-wrapper">
 
       <article class="thought-card">
-        <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="image-box">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="image-box">
           <img src="./assets/rollercoaster04.jpeg" alt="A colorful rollercoaster">
         </a>
-        <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="articles-by-me">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="articles-by-me">
           <div class="red-on-hover">
             <p class="red-thin">JAN 2020</p>
             <h6>A Newbie Developer: </h6>
@@ -208,10 +211,10 @@
       </article>
 
       <article class="thought-card">
-        <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="image-box">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="image-box">
           <img src="./assets/pattern.jpeg" alt="A digital rendering of colorful fur">
         </a>
-        <a href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="articles-by-me">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="articles-by-me">
           <div class="red-on-hover">
             <p class="red-thin">MAR 2020</p>
           <h6>In The Thick Of It: </h6>
@@ -226,11 +229,11 @@
     
     <h5>MORE THOUGHTS</h5>
     <div class="more-thoughts-container">
-      <a href="#" class="more-thoughts-list red-on-hover">
+      <a target="_blank" rel="noopener noreferrer" href="#" class="more-thoughts-list red-on-hover">
         <span class="red-thin red-underline">APR 2020</span> My favorite project to date. <span class="red-bold red-underline">>></span>
       </a>
 
-      <a href="#" class="more-thoughts-list red-on-hover">
+      <a target="_blank" rel="noopener noreferrer" href="#" class="more-thoughts-list red-on-hover">
         <span class="red-thin red-underline">DEC 2019</span> Happy Coding! <span class="red-bold red-underline">>></span>
       </a>
     </div> 
@@ -283,20 +286,20 @@
 
     <section class="circles-red">
       <div>
-        <a href="https://www.linkedin.com/in/ragnaulfars/" class="circle-red">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ragnaulfars/" class="circle-red">
           <img class="icons-red" src="./assets/icon-linkedin-red.svg" alt="Linked-in icon">
         </a>
         <p class="red-bold">LINKEDIN</p>
       </div>
      <div>
-      <a href="https://github.com/Ragtulf" class="circle-red">
+      <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf" class="circle-red">
         <img class="icons-red" src="./assets/github-red.svg" alt="Github icon">
       </a>
       <p class="red-bold">GITHUB</p>
      </div>
       
      <div>
-      <a href="https://stackoverflow.com/c/technigo/users/61/?tab=profile" class="circle-red">
+      <a target="_blank" rel="noopener noreferrer" href="https://stackoverflow.com/c/technigo/users/61/?tab=profile" class="circle-red">
         <img class="icons-red" src="./assets/stackoverflow-red.svg" alt="Stack-overflow icon">
       </a>
       <p class="red-bold">STACKOVERFLOW</p>
@@ -311,8 +314,8 @@
     <div class="contact-text">
       <h5 class="contact">CONTACT</h5>
       <p>Ragna Úlfarsdóttir</p>
-      <p>+46 079 078 11 23</p>
-      <p>ragnaulfars@gmail.com</p>
+      <a href="tel:+460790781123">+46 079 078 11 23</a>
+      <a href="mailto:ragnaulfars@gmail.com">ragnaulfars@gmail.com</a>
     </div>
   </section>
 
